<resources>
    <string name="app_name">Falling Words</string>
    <string name="home_description">We are so happy to see you! It is a simple word game\n\n1- You need to answer if the translation is right or wrong.\n2- You have time to answer.\n\nAre you ready?
    </string>
    <string name="home_title">Welcome</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="select_the_level">Select the level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="wrong">WRONG</string>
    <string name="play_again">Play again</string>
    <string name="score">SCORE</string>
    <string name="correct">CORRECT</string>
    <string name="total_right">Total Right: %1$d</string>
    <string name="total_wrong">Total Wrong: %1$d</string>
    <string name="total_question">Total Questions: %1$d</string>
</resources>
