<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/txtTitleHomeLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/select_the_level"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
            android:id="@+id/rdGroupLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@id/txtTitleHomeLevel"
            app:layout_constraintTop_toBottomOf="@id/txtTitleHomeLevel">

        <RadioButton
                android:id="@+id/rdEasyLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:text="@string/easy"/>
        <RadioButton
                android:id="@+id/rdMediumLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:text="@string/medium"/>
        <RadioButton
                android:id="@+id/rdHardLevel"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:layout_height="wrap_content"
                android:text="@string/hard"/>
    </RadioGroup>


    <Button
            android:id="@+id/btnNextLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/next"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>